Try to improve compilation time